@@ -15,10 +15,10 @@ $(KERNEL_TOOLCHAIN_STAGING_DIR):
 	@mkdir -p $@/lib
 	@mkdir -p $@/$(REAL_GNU_KERNEL_NAME)
 	@ln -snf ../lib $@/$(REAL_GNU_KERNEL_NAME)/lib
-	@ln -fs $(BUILD_DIR)/$(KERNEL_TOOLCHAIN_COMPILER)/$(REAL_GNU_KERNEL_NAME) $(TOOLCHAIN_DIR)/kernel
 
-kernel-toolchain: $(KERNEL_TOOLCHAIN_DIR) $(KERNEL_TOOLCHAIN_STAGING_DIR) $(KERNEL_TOOLCHAIN)
-	
+kernel-toolchain: $(KERNEL_TOOLCHAIN_DIR) $(KERNEL_TOOLCHAIN_STAGING_DIR) $(KERNEL_TOOLCHAIN_SYMLINK) \
+		$(KERNEL_TOOLCHAIN)
+
 kernel-toolchain-source: $(KERNEL_TOOLCHAIN_DIR) \
 	$(BINUTILS_KERNEL_DIR)/.unpacked \
 	$(GCC_KERNEL_DIR)/.unpacked \
