@@ -8,6 +8,8 @@ Latest changes:
   * toolchains:
     - add menuconfig option to adjust HOSTCC variable 
     - add ccache for download- and kernel-toolchain
+    - fix some toolchain dependencies
+    - adapt updates from buildroot
 
 - New tools and hooks:
   * external
